2.2.2/_sources/gallery/text_labels_and_annotations/dfrac_demo.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_text_labels_and_annotations_dfrac_demo.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_text_labels_and_annotations_dfrac_demo.py:


=========================================
The difference between \\dfrac and \\frac
=========================================

In this example, the differences between the \\dfrac and \\frac TeX macros are
illustrated; in particular, the difference between display style and text style
fractions when using Mathtex.

.. versionadded:: 2.1

.. note::
    To use \\dfrac with the LaTeX engine (text.usetex : True), you need to
    import the amsmath package with the text.latex.preamble rc, which is
    an unsupported feature; therefore, it is probably a better idea to just
    use the \\displaystyle option before the \\frac macro to get this behavior
    with the LaTeX engine.





.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_dfrac_demo_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    import matplotlib.pyplot as plt

    fig = plt.figure(figsize=(5.25, 0.75))
    fig.text(0.5, 0.3, r'\dfrac: $\dfrac{a}{b}$',
             horizontalalignment='center', verticalalignment='center')
    fig.text(0.5, 0.7, r'\frac: $\frac{a}{b}$',
             horizontalalignment='center', verticalalignment='center')
    plt.show()


.. _sphx_glr_download_gallery_text_labels_and_annotations_dfrac_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: dfrac_demo.py <dfrac_demo.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: dfrac_demo.ipynb <dfrac_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
